# Forge

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: agent.rs  lib.rs  main.rs  output.rs  types.rs
src/tools/: ask.rs  bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  webfetch.rs  websearch.rs  write.rs
