[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = "4.1"
console = "0.15"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
similar = "2.6"
globset = "0.4"
walkdir = "2.5"
grep-regex = "0.1"
grep-searcher = "0.1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
websearch = "0.1"
html2md = "0.2"
inquire = "0.7"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
